# PIT-2025

./: .gitignore  README.md
clase4/src/: parabolic.cpp  publicador.cpp  publicador.py
clase5/: CMakeLists.txt  package.xml
clase5/src/: cliente.cpp
codigo_clase/clase4/: CMakeLists.txt  package.xml
codigo_clase/clase4/src/: suscriptor.cpp
codigo_clase/clase5/src/: parabola_cliente.cpp  parabola_service.cpp  servidor.cpp
docs/: Instalar_wsl.md  configuracion_vscode.md  instalar_ROS.md  siguientes_pasos.md  uso_repositorio.md
launch_files/: CMakeLists.txt  package.xml
launch_files/config/: parameter.yaml
launch_files/launch/: drive.launch  parameter.launch  parameter_file.launch  system.launch  turtlesim.launch
launch_files/src/: parameter_server.cpp
package_1/: CMakeLists.txt  package.xml
pitbot_description/: CMakeLists.txt  package.xml
pitbot_description/launch/: display_rviz.launch
pitbot_description/rviz/: display_robot.rviz
pitbot_description/urdf/: pitbot.urdf
service_package/: CMakeLists.txt  package.xml
service_package/launch/: tarea_parabola.launch
service_package/src/: cliente.cpp  servidor.cpp
test_package/: CMakeLists.txt  package.xml
test_package/scripts/: publicador.py
test_package/src/: parabolic.cpp  pub_sub.cpp  publicador.cpp  suscriptor.cpp
