<?xml version="1.0"?>
<package format="2">
  <name>package_1</name>
  <version>0.0.0</version>
  <description>The package_1 package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="pit2025@todo.todo">pit2025</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
